--- a/projects/website.html
+++ b/projects/website.html
@@ -6,7 +6,7 @@
   <body>
     <script src="index.html"></script>
 <ul>
-  <p>Europe</p>
+  <p>EUROPE</p>
    <li><a href="#home">Hotels</a></li>
     <li><a href="#news">Tips</a></li>
     <li class="dropdown">
