--- a/projects/website.html
+++ b/projects/website.html
@@ -18,7 +18,7 @@
           <a href="">Festivals</a>
     </div>
     </li>
-  <li><a href="#about">Destinations</a></li>
+  <li><a href="destinations.html">Destinations</a></li>
   </ul>
   <div class="image">
     <br> <br> <br>
