--- a/website/hotels.html
+++ b/website/hotels.html
@@ -29,7 +29,7 @@
     </p>
   </td>
   <td>
-  <img src="https://s-ec.bstatic.com/images/hotel/max1024x768/444/44462049.jpg" width="560" height="315">
+  <img src="/images/aria.jpg" width="560" height="315">
   </td>
 </tr>  
 <tr class="background2">
@@ -39,7 +39,7 @@
    A 3-minute walk from Torino Porto Nuova train station, this upscale hotel in an elegant building is 2 km from the Parco del Valentino botanical gardens and 2.3 km from the city center. Refined rooms with chic decor feature free Wi-Fi, flat-screen TVs and minibars with complimentary soft drinks; some add pull-out sofas and connecting rooms. Upgraded quarters, some on the top floor, add city-view balconies. A breakfast buffet is free. There’s also a polished restaurant, as well as a tranquil spa area with a hammam, whirlpool tubs and a sauna. Other amenities include 3 meeting rooms and a panoramic city-view terrace.</p>
   </td>
   <td>
-  <img src="https://media-cdn.tripadvisor.com/media/photo-o/08/28/85/86/turin-palace-hotel.jpg" width="560" height="315">
+  <img src="/images/turin.jpg" width="560" height="315">
   </td>
   </tr>  
 <tr class="background">
@@ -48,7 +48,7 @@
    <p>“Wow, wow, wow. This hotel has basically reached perfection in service, style, cleanliness and comfort.” <br>
    Set in a building dating from 1846, this refined hotel is a 9-minute walk from the Picasso Museum, 1.5 km from the beach, and a 10-minute walk from Les Ramblas. The modern, wood-floored rooms and suites feature free Wi-Fi, flat-screen TVs, and Nespresso coffeemakers. They also include balconies with city or sea views. Suites add living areas, and some suites have whirlpool tubs. One of the suites is set in Pablo Picasso's former studio. Room service is available. Catalan cuisine is served in an informal restaurant with an open kitchen, and there's a rooftop terrace with dining, a gym, an infinity pool and a sky bar overlooking Port Vell Marina.</p>
   </td>
-  <td><img src="https://s-ec.bstatic.com/images/hotel/max1024x768/803/80311828.jpg" width="560" height="315">
+  <td><img src="/images/serras.jpg" width="560" height="315">
   </td>
   </tr> 
   
