--- a/website/greece.html
+++ b/website/greece.html
@@ -25,12 +25,12 @@
   </p>
   <div class="margin">
   <table>
-     <tr>
+   <tr>
       <td>
        <img src="/images/calendar.png">
       </td>
       <td>
-        <img src="/images/buildingsymbol.jpg">
+        <img src="/images/buildingsymbol.svg">
       </td>
       <td>
         <img src= "/images/fork.jpg">
