--- a/website/paris.html
+++ b/website/paris.html
@@ -27,13 +27,13 @@
   <table>
     <tr>
       <td>
-       <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/404-200.png">
+       <img src="/images/calendar.png">
       </td>
       <td>
-        <img src="https://svn.openstreetmap.org/applications/share/map-icons/svg/incomming/monument.svg?p=24624">
+        <img src="/images/buildingsymbol.svg">
       </td>
       <td>
-        <img src= "https://www.stonehousesigns.com/sites/default/files/products/formatted/Restaruant_Knife_Fork_WJ85.jpg">
+        <img src= "/images/fork.jpg">
       </td>
     </tr>
     <tr>
