--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
+<img src="/images/download.png">
 <body style="text-align:center">
   
-  <h1 style="background-color:SkyBlue;">My ECS Github Page <img src="/images/download.png"></h1>
+  <h1 style="background-color:SkyBlue;">My ECS Github Page</h1>
   <h2 title="About Unit 3"> Unit 3: HTML</h2>
   <hr>
   <p style="font-family:courier;">Welcome!</p>
