--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
+ <head>
 <img src="/images/download.png">
+  </head>
 <body style="text-align:center">
   
   <h1 style="background-color:SkyBlue;">My ECS Github Page</h1>
