--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
- <head>
-<img src="/images/download.png">
-  </head>
+<link rel="icon" href="/images/download.png">
+
 <body style="text-align:center">
   
   <h1 style="background-color:SkyBlue;">My ECS Github Page</h1>
