--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="icon" href="/images/download.png">
+<link rel="icon" href="/images/favicon.ico">
 
 <body style="text-align:center">
   
