--- a/responsive.html
+++ b/responsive.html
@@ -2,11 +2,11 @@
 <html>
 <body>
    <div>
-     <img src='sunset2-jpg-maxq.jpg.jpg'
-        srcset='/images/sunset4000.jpg 4000w,
+     <img src='/images/sunset2000.jpg'
+        srcset='/images/sunset2-jpg-maxq.jpg 3504w,
+                /images/sunset4000.jpg 4000w,
                 /images/sunset3000.jpg 3000w,
-                /images/sunset2000.jpg 2000w,
-                /images/sunset2-jpg-maxq.jpg 3504w'>
+                /images/sunset2000.jpg 2000w'>
    </div>
 </body>
 </html>
