--- a/responsive.html
+++ b/responsive.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
-   <div>
+<div>
+<div>
      <img src='/images/sunset2000.jpg'
         srcset='/images/sunset2-jpg-maxq.jpg 3504w,
-                /images/sunset4000.jpg 4000w,
-                /images/sunset3000.jpg 3000w,
-                /images/sunset2000.jpg 2000w'>
+                /images/sunset4000.jpg 3000w,
+                /images/sunset3000.jpg 2000w,
+                /images/sunset2000.jpg 1000w
+'>
    </div>
 </body>
 </html>
