--- a/responsive.html
+++ b/responsive.html
@@ -2,12 +2,10 @@
 <html>
 <body>
 <div>
-     <img src='/images/sunset2000.jpg'
-        srcset='/images/sunset2-jpg-maxq.jpg 3504w,
+     <img src='/images/sunset2-jpg-maxq.jpg'
+        srcset='/images/sunset2000.jpg 2000w,
                 /images/sunset4000.jpg 4000w,
-                /images/sunset3000.jpg 3000w,
-                /images/sunset2000.jpg 2000w
-'>
+                /images/sunset3000.jpg 3000w'>
    </div>
 </body>
 </html>
