--- a/responsive.html
+++ b/responsive.html
@@ -3,8 +3,8 @@
 <body>
 <div>
      <img src='/images/sunset2000.jpg'
-        srcset='/images/sunset2-jpg-maxq.jpg 3504w,
-                /images/sunset4000.jpg 4000w,
+        srcset='/images/sunset4000.jpg 4000w,
+                /images/sunset2-jpg-maxq.jpg 3504w,
                 /images/sunset3000.jpg 3000w,
                 /images/sunset2000.jpg 2000w'>
    </div>
