--- a/website/index.html
+++ b/website/index.html
@@ -19,7 +19,7 @@
   </ul>
   <div class="image">
   <br>
-  <div class="image">
+  <div class="background">
   <!--Starting Home Page Background-->
   <table>
     <tr>
