--- a/website/index.html
+++ b/website/index.html
@@ -38,10 +38,11 @@
     </tr>
 </table>
 </div>
-   <p class="caption2"> <b>Uncover <br> Europe</b></p> 
-   <br>
-   <p class="caption">There is no way not to appreciate Europe’s scenic beauty, remarkable history, and its culture. All seen in the European lifestyle.</p>
- </div>
+<div class="image">
+    <br> <br> <br>
+    <h1 class="caption2"> Uncover <br> Europe</h1> <br><br><br><br>
+    <p class="caption">There is no way not to appreciate Europe’s scenic beauty, remarkable history, and its culture. All seen in the European lifestyle.</p>
+</div>
   <p class="overview">
     <br>
     <br>
