--- a/website/index.html
+++ b/website/index.html
@@ -38,7 +38,7 @@
 </div>
 <div class="image">
     <br> <br> <br>
-    <h1 class="caption2"> Uncover <br> Europe</h1>
+    <h1 class="caption2"> Uncover <br> Europe</h1> <br>
     <p class="caption">There is no way not to appreciate Europe’s scenic beauty, remarkable history, and its culture. All seen in the European lifestyle.</p>
 </div>
   <p class="overview">
