--- a/projects/destinations.html
+++ b/projects/destinations.html
@@ -12,7 +12,7 @@
     <li class="dropdown">
       <a href="lol" class="dropbtn">Inspiration</a>
     <div class="dropdown-content">
-          <a href="#">History/Past</a>
+          <a href="history.html">History/Past</a>
           <a href="#">Beaches</a>
           <a href="#">Adventure</a>
           <a href="">Festivals</a>
