--- a/projects/website.html
+++ b/projects/website.html
@@ -7,13 +7,13 @@
     <script src="index.html"></script>
 <ul>
   <p>EUROPE</p>
-   <li><a href="#home">Hotels</a></li>
+   <li><a href="hotels.html">Hotels</a></li>
     <li><a href="#news">Tips</a></li>
     <li class="dropdown">
       <a href="lol" class="dropbtn">Inspiration</a>
     <div class="dropdown-content">
-          <a href="#">History/Past</a>
-          <a href="#">Beaches</a>
+          <a href="history.html">History/Past</a>
+          <a href="beaches.html">Beaches</a>
           <a href="#">Adventure</a>
           <a href="">Festivals</a>
     </div>
